--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.0.2",
     "@netlify/plugin-nextjs": "^5.7.0",
     "next": "^14.2.0",
     "react": "^18.2.0",
